Critical error fix

--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,11 @@
 <head>
     <title>AllTWay Visual EQ</title>
 
-    <link rel="stylesheet" href="src/style/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
-    <script src="src/js/p5.min.js"></script>
-    <script src="src/js/p5.sound.min.js"></script>
-    <script src="src/js/sketch.js"></script>
+    <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="sketch.js"></script>
 </head>
 
 <body>
