Updates to styling

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="title">Sopas</div>
+        <div class="artist">De Leite</div>
+    </div>
 </body>
 
 </html>
