--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <script src="p5.min.js"></script>
+    <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
     <script src="sketch.js"></script>
 </head>
@@ -15,6 +16,7 @@
     <div class="wrapper">
         <div class="title">Sopas</div>
         <div class="artist">De Leite</div>
+        <!-- <div id="volume"></div> -->
     </div>
 </body>
 
