implemented settings in overlay

--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,14 @@
     <script src="sketch.js"></script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <div class="wrapper">
         <div class="title">Sopas</div>
         <div class="artist">De Leite</div>
         <!-- <div id="volume"></div> -->
+    </div>
+    <div id="settings">
+        <h1>Right-click to toggle the Settings menu</h1>
     </div>
 </body>
 
