added rgb color settings for background

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,15 @@
         <!-- <div id="volume"></div> -->
     </div>
     <div id="settings">
-        <h1>Right-click to toggle the Settings menu</h1>
+        <div class="setting">
+            <p style="font-size: 20px; font-weight: 500;">Right-click to toggle the Settings menu</p>
+            <p>If refresh the page without saving, settings <strong>will be lost!</strong></p>
+        </div>
+        <div id="smooth" class="setting"></div>
+        <div id="bandspace" class="setting"></div>
+        <div id="imagesize" class="setting"></div>
+        <div id="image_color" class="setting"></div>
+        <div id="save_settings" class="setting"></div>
     </div>
 </body>
 
