lowpass filter added

--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,8 @@
         <div id="bandspace" class="setting"></div>
         <div id="imagesize" class="setting"></div>
         <div id="image_color" class="setting"></div>
+        <div id="eq" class="setting"></div>
+        <div id="filter" class="setting"></div>
         <div id="save_settings" class="setting"></div>
     </div>
 </body>
