Implemented EQ colors and mirror mode

--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,10 @@
 
 <body oncontextmenu="return false;">
     <div class="wrapper">
-        <div class="title">Sopas</div>
-        <div class="artist">De Leite</div>
+        <object id="logo" class="logo" type="image/svg+xml"></object>
+        <!-- <img id="logo" class="logo"> -->
+        <div id="title" class="title">Sopas</div>
+        <div id="artist" class="artist">De Leite</div>
         <!-- <div id="volume"></div> -->
     </div>
     <div id="settings">
@@ -27,6 +29,7 @@
         <div id="bandspace" class="setting"></div>
         <div id="imagesize" class="setting"></div>
         <div id="image_color" class="setting"></div>
+        <div id="eq_color" class="setting"></div>
         <div id="eq" class="setting"></div>
         <div id="filter" class="setting"></div>
         <div id="save_settings" class="setting"></div>
