--- a/html/index.html
+++ b/html/index.html
@@ -20,10 +20,9 @@
     <script src="sketch.js"></script>
 </head>
 
-<body oncontextmenu="return false;">
+<body oncontextmenu="return false;" scroll="no">
     <div class="wrapper">
         <object id="logo" class="logo" type="image/svg+xml"></object>
-        <!-- <img id="logo" class="logo"> -->
         <div id="title" class="title">Song Name</div>
         <div id="artist" class="artist">Artist</div>
         <!-- <div id="volume"></div> -->
@@ -31,7 +30,7 @@
     <div id="settings">
         <div class="setting">
             <p style="font-size: 20px; font-weight: 500;">Right-click to toggle the Settings menu</p>
-            <p>If refresh the page without saving, settings <strong>will be lost!</strong></p>
+            <p>If the page is refreshed without saving all changed settings <strong>will be lost!</strong></p>
         </div>
         <div id="smooth" class="setting"></div>
         <div id="bands" class="setting"></div>
