--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,9 @@
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
+
+    <script src="normalize.js"></script>
+
     <script src="sketch.js"></script>
 </head>
 
