reorganized code + visualization experiments

--- a/html/index.html
+++ b/html/index.html
@@ -14,11 +14,16 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <script src="p5.min.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <script src="js/p5/p5.min.js"></script>
+    <script src="js/p5/p5.dom.min.js"></script>
+    <script src="js/p5/p5.sound.min.js"></script>
 
-    <script src="normalize.js"></script>
+    <script src="js/normalize.js"></script>
+    <script src="js/settingsOverlay.js"></script>
+    <script src="js/saveLoad_Settings.js"></script>
+
+    <script src="js/vis/spectrum_algorithms.js"></script>
+    <script src="js/vis/spectrum_config.js"></script>
 
     <script src="sketch.js"></script>
 </head>
