--- a/html/index.html
+++ b/html/index.html
@@ -18,13 +18,13 @@
     <script src="js/p5/p5.dom.min.js"></script>
     <script src="js/p5/p5.sound.min.js"></script>
 
-    <script src="js/normalize.js"></script>
+    <script src="js/algorithms.js"></script>
     <script src="js/settingsOverlay.js"></script>
 
-    <script src="js/vis/spectrum_algorithms.js"></script>
-    <script src="js/vis/spectrum_config.js"></script>
-
     <script src="sketch.js"></script>
+
+    <!-- <script src="js/vis/spectrum_config.js"></script> -->
+    <!-- <script src="js/vis/spectrum_algorithms.js"></script> -->
 </head>
 
 <body oncontextmenu="return false;" scroll="no">
