Added NowPlaying Tab with settings

--- a/html/index.html
+++ b/html/index.html
@@ -48,12 +48,14 @@
             <button class="tablinks" onclick="openTab(event, 'Bands')">Bands</button>
             <button class="tablinks" onclick="openTab(event, 'Image')">Image</button>
             <button class="tablinks" onclick="openTab(event, 'Colors')">Colors</button>
+            <button class="tablinks" onclick="openTab(event, 'NowPlaying')">Now Playing</button>
         </div>
 
         <div id="EQ" class="tabcontent setting"></div>
         <div id="Bands" class="tabcontent setting"></div>
         <div id="Image" class="tabcontent setting"></div>
         <div id="Colors" class="tabcontent setting"></div>
+        <div id="NowPlaying" class="tabcontent setting"></div>
 
         <!-- <input id="file-input" type="file" name="settings.json" style="display: none;" /> -->
     </div>
