--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,7 @@
         <object id="logo" class="logo" type="image/svg+xml"></object>
         <div id="title" class="title">Title</div>
         <div id="artist" class="artist">Artist</div>
-        <iframe id="songInfo" width="350px" height="70" class="songInfo" frameborder="0" src="https://nowplaying.aidenwallis.co.uk/5e3207f18bdd560a8e9d515d" style="color: rgb(255, 255, 255);"></iframe>
-        <!-- <div id="volume"></div> -->
+        <iframe id="songInfo" width="350px" height="70" class="songInfo" frameborder="0" style="color: rgb(255, 255, 255);"></iframe>
     </div>
 
 
