--- a/html/index.html
+++ b/html/index.html
@@ -29,8 +29,12 @@
 <body oncontextmenu="return false;" scroll="no">
     <div class="wrapper" style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" unselectable="on" onselectstart="return false;" onmousedown="return false;">
         <object id="logo" class="logo" type="image/svg+xml"></object>
+
         <div id="title" class="title">Title</div>
         <div id="artist" class="artist">Artist</div>
+        <iframe id="title_frame" frameborder="0" src="http://localhost:8000/title"></iframe>
+        <iframe id="artist_frame" frameborder="0" src="http://localhost:8000/artist"></iframe>
+
         <iframe id="songInfo" width="350px" height="70" class="songInfo" frameborder="0"></iframe>
     </div>
 
