Added button for quick Spotify Link

--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,8 @@
 
         <div id="title" class="title">Title</div>
         <div id="artist" class="artist">Artist</div>
-        <iframe id="title_frame" frameborder="0" src="http://localhost:8000/title"></iframe>
-        <iframe id="artist_frame" frameborder="0" src="http://localhost:8000/artist"></iframe>
+        <iframe id="title_frame" frameborder="0" src="http://localhost:8000/title" style="display: none;"></iframe>
+        <iframe id="artist_frame" frameborder="0" src="http://localhost:8000/artist" style="display: none;"></iframe>
 
         <iframe id="songInfo" width="350px" height="70" class="songInfo" frameborder="0"></iframe>
     </div>
