--- a/html/index.html
+++ b/html/index.html
@@ -59,6 +59,8 @@
         <div id="NowPlaying" class="tabcontent setting"></div>
     </div>
 
+    <input id="Input" style="display: none;">
+
     <script src="js/tabScript.js"></script>
 </body>
 
